--- a/libft/srcs/Makefile
+++ b/libft/srcs/Makefile
@@ -1,7 +1,10 @@
+FLGS = -Wall -Wextra -Werror
 
-NAME = libft.a 
+NAME = libft.a
 
-SRCS = ft_atoi.c      ft_isdigit.c   ft_memmove.c      ft_split.c         ft_strlcat.c   ft_strrchr.c \
+AR = ar rcs
+
+SRCS = ft_atoi.c ft_isdigit.c   ft_memmove.c      ft_split.c         ft_strlcat.c   ft_strrchr.c \
  ft_bzero.c     ft_isprint.c   ft_memset.c        ft_strlcpy.c   ft_strtrim.c \
  ft_calloc.c    ft_itoa.c      ft_putchar_fd.c   ft_strchr.c        ft_strlen.c    ft_substr.c \
  ft_isalnum.c   ft_memchr.c    ft_putendl_fd.c   ft_strdup.c        ft_strmapi.c   ft_tolower.c \
@@ -9,37 +12,44 @@ SRCS = ft_atoi.c      ft_isdigit.c   ft_memmove.c      ft_split.c         ft_str
  ft_isascii.c   ft_memcpy.c    ft_putstr_fd.c    ft_strjoin.c       ft_strnstr.c 
 
 
-
-BONUS = ft_lstnew.c
-
-FLGS = -Wall -Wextra -Werror
+BONUS = ft_lstnew.c ft_lstadd_front.c ft_lstsize.c \
+		ft_lstlast.c ft_lstadd_back.c \
 
 
 
 OBJECT = $(SRCS:.c=.o) 
 
+OBJECT_B = $(BONUS:.c=.o)
+
 CC = cc 
 
-RM = rm
+RM = rm -f
 
 
+.SILENT:
 
-all : $(NAME)
+all: $(NAME)
 
-$(NAME) : $(OBJECT)
-	ar rcs $(NAME) $(OBJECT)
+$(NAME): $(OBJECT)
+	$(AR) $@ $^
+
+bonus: $(OBJECT_B)
+	ar rcs $(NAME) $^
+
 
 %.o:%.c libft.h
-	$(CC) $(FLGS) -c $< -o $@ 
+	cc $(FLGS) -c -o $@ $<
 
-clean :
-	$(RM) -f $(OBJECT)
+clean:
+	$(RM)  $(OBJECT) $(OBJS_B)
 
 
-fclean :
-	$(RM) -f $(NAME)
 
-re : fclean all
+fclean:
+	$(RM) $(NAME) $(BONUS)
+
+re:
+	clean all
 
 exec:
-	cc	-g $(SRCS) -lbsd
+	cc	-g $(SRCS) $(BONUS) -lbsd
